--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 h1 {
   margin-left: 10px;
 }
+.bg-yellow {
+  background: #fffce4;
+}
+.btn-color {
+  background-color: #46af06;
+  color: #fff;
+}
+.vh-100 {
+  height: 100vh;
+}
