--- a/src/components/carousel1/carousel.css
+++ b/src/components/carousel1/carousel.css
@@ -13,3 +13,10 @@ p {
 .card:hover {
   box-shadow: 0 0 5px rgb(206, 204, 204);
 }
+.img {
+  background-position: center;
+  background-size: cover;
+  background-clip: border-box;
+  width: 600px;
+  height: 250px !important;
+}
